using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CacheString : MonoBehaviour
{
    public static string TAG_WIN = "Win";
    public static string TAG_ISRUNNING = "IsJumping";
    public static string TAG_APPEAR = "Appear";
    public static string TAG_GROUND = "Ground";
    public static string TAG_SPRING = "Spring";
    public static string TAG_IDLE = "Idle";
    public static string TAG_PORTALIN = "PortalIn";
    public static string TAG_PORTALOUT = "PortalOut";
    public static string TAG_BLINK = "Blink";
}
